MOTU-202 Documented tds.http.sotimeout and .conntimeout parameters